# api/build/swagger.json
@@ -7,70 +7,261 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Pick_Dataset.Exclude_keyofDataset.chunks__": {
+				"properties": {
+					"id": {
+						"type": "integer",
+						"format": "int32",
+						"description": "The database id of the dataset"
+					},
+					"mnemonic": {
+						"type": "string",
+						"description": "The mnemonic of the dataset"
+					},
+					"fileName": {
+						"type": "string",
+						"description": "The name of the file the dataset was created from"
+					},
+					"createdBy": {
+						"type": "string",
+						"description": "The user that uploaded the dataset"
+					},
+					"keyHash": {
+						"type": "string",
+						"description": "The hash of the AES-256 encryption key"
+					},
+					"name": {
+						"type": "string",
+						"description": "A custom non unique name of the dataset"
+					},
+					"path": {
+						"type": "string",
+						"description": "The original path of the dataset"
+					},
+					"hash": {
+						"type": "string",
+						"description": "The hash of the entire dataset"
+					},
+					"size": {
+						"type": "integer",
+						"format": "int32",
+						"description": "The size of the dataset in bytes"
+					}
+				},
+				"required": [
+					"id",
+					"mnemonic",
+					"fileName",
+					"createdBy",
+					"keyHash",
+					"name",
+					"path",
+					"hash",
+					"size"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Dataset.chunks_": {
+				"$ref": "#/components/schemas/Pick_Dataset.Exclude_keyofDataset.chunks__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"UploadStartResponse": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Omit_Dataset.chunks_"
+					},
+					{
+						"properties": {
+							"duplicate": {
+								"type": "string",
+								"description": "The hash of the duplicate dataset or null if there is no duplicate"
+							}
+						},
+						"type": "object"
+					}
+				]
+			},
+			"Pick_Dataset.fileName-or-size-or-name-or-path_": {
+				"properties": {
+					"fileName": {
+						"type": "string",
+						"description": "The name of the file the dataset was created from"
+					},
+					"name": {
+						"type": "string",
+						"description": "A custom non unique name of the dataset"
+					},
+					"path": {
+						"type": "string",
+						"description": "The original path of the dataset"
+					},
+					"size": {
+						"type": "integer",
+						"format": "int32",
+						"description": "The size of the dataset in bytes"
+					}
+				},
+				"required": [
+					"fileName",
+					"name",
+					"path",
+					"size"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"UploadStartBody": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Pick_Dataset.fileName-or-size-or-name-or-path_"
+					},
+					{
+						"properties": {
+							"chunkHash": {
+								"type": "string",
+								"description": "The hash of the first 2MiB chunk of the file"
+							}
+						},
+						"required": [
+							"chunkHash"
+						],
+						"type": "object"
+					}
+				]
+			},
 			"User": {
+				"properties": {
+					"sub": {
+						"type": "string"
+					},
+					"scopes": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"isAdmin": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"sub",
+					"scopes",
+					"isAdmin"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Token": {
 				"properties": {
 					"id": {
 						"type": "number",
 						"format": "double"
 					},
-					"email": {
+					"value": {
 						"type": "string"
 					},
-					"name": {
+					"sub": {
 						"type": "string"
 					},
-					"status": {
+					"scope": {
+						"type": "string"
+					},
+					"exp": {
 						"type": "string",
-						"enum": [
-							"Happy",
-							"Sad"
-						]
+						"format": "date-time",
+						"nullable": true
 					},
-					"phoneNumbers": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
-					"email",
-					"name",
-					"phoneNumbers"
+					"value",
+					"sub",
+					"scope",
+					"exp",
+					"createdAt",
+					"updatedAt"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_User.email-or-name-or-phoneNumbers_": {
+			"TokenResponse": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Token"
+					},
+					{
+						"properties": {
+							"expired": {
+								"anyOf": [
+									{
+										"type": "string"
+									},
+									{
+										"type": "boolean",
+										"enum": [
+											false
+										]
+									}
+								],
+								"description": "false if the token has not expired,\notherwise a string describing how long ago the token expired"
+							},
+							"scopes": {
+								"items": {
+									"type": "string"
+								},
+								"type": "array",
+								"description": "The array of scopes the token has"
+							}
+						},
+						"required": [
+							"expired",
+							"scopes"
+						],
+						"type": "object"
+					}
+				]
+			},
+			"TokenAddBody": {
 				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"phoneNumbers": {
+					"scopes": {
 						"items": {
 							"type": "string"
 						},
-						"type": "array"
+						"type": "array",
+						"description": "The array of scopes the token should have"
+					},
+					"lifetime": {
+						"type": "integer",
+						"format": "int32",
+						"nullable": true,
+						"description": "The time in seconds the token should be valid for\nIf null the token will never expire"
 					}
 				},
 				"required": [
-					"email",
-					"name",
-					"phoneNumbers"
+					"scopes",
+					"lifetime"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"UserCreationParams": {
-				"$ref": "#/components/schemas/Pick_User.email-or-name-or-phoneNumbers_"
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
-			"BearerAuth": {
+			"api_key": {
+				"type": "http",
+				"name": "Authorization",
+				"scheme": "bearer"
+			},
+			"jwt": {
 				"type": "oauth2",
 				"flows": {
 					"authorizationCode": {
@@ -96,10 +287,53 @@
 			"name": "Michael Huttner"
 		}
 	},
+	"servers": [
+		{
+			"url": "/api/v1"
+		}
+	],
 	"paths": {
-		"/user/{userId}": {
+		"/upload/start": {
+			"post": {
+				"operationId": "Start",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UploadStartResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Upload"
+				],
+				"security": [
+					{
+						"jwt": [
+							"upload"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UploadStartBody"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/token/info": {
 			"get": {
-				"operationId": "GetUser",
+				"operationId": "Info",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -112,54 +346,165 @@
 						}
 					}
 				},
-				"security": [],
-				"parameters": [
+				"tags": [
+					"Token"
+				],
+				"security": [
 					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
+						"api_key": []
 					},
 					{
-						"in": "query",
-						"name": "name",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
+						"jwt": []
 					}
-				]
+				],
+				"parameters": []
 			}
 		},
-		"/user": {
+		"/token/add": {
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "Add",
 				"responses": {
-					"201": {
-						"description": "Created"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TokenResponse"
+								}
+							}
+						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Token"
+				],
+				"security": [
+					{
+						"jwt": [
+							"token"
+						]
+					},
+					{
+						"api_key": [
+							"token"
+						]
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/UserCreationParams"
+								"$ref": "#/components/schemas/TokenAddBody"
 							}
 						}
 					}
 				}
 			}
+		},
+		"/token/list": {
+			"get": {
+				"operationId": "List",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/TokenResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Token"
+				],
+				"security": [
+					{
+						"jwt": [
+							"token"
+						]
+					},
+					{
+						"api_key": [
+							"token"
+						]
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/token/remove/{tokenId}": {
+			"post": {
+				"operationId": "Remove",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Token"
+				],
+				"security": [
+					{
+						"jwt": [
+							"token"
+						]
+					},
+					{
+						"api_key": [
+							"token"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "tokenId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/upload/chunk": {
+			"put": {
+				"operationId": "Chunk",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Upload"
+				],
+				"security": [
+					{
+						"jwt": [
+							"upload"
+						]
+					}
+				],
+				"consumes": [
+					"multipart/form-data"
+				],
+				"parameters": [
+					{
+						"in": "formData",
+						"name": "file",
+						"type": "file",
+						"required": true
+					}
+				]
+			}
 		}
-	},
-	"servers": [
-		{
-			"url": "/api/v1"
-		}
-	]
+	}
 }
